# fictional-guide

./: .gitignore  chatgpt transcript.html  data_download.ipynb  hist.json  mise.toml  nifty-200.csv  plan.md  plots.ipynb  pyproject.toml  yfinance_high.csv  yfinance_open.csv  yfinance_volume.csv
.ipynb_checkpoints/: data_download-checkpoint.ipynb  plots-checkpoint.ipynb  yfinance_close-checkpoint.csv  yfinance_low-checkpoint.csv
archive/impl/setup/: setup_db.py
archive/impl/test/: simulator.py
buffet/: api.py  cron_plan.py  decision.py  execute.py  plan.py  repository.py  run_simulation.py  simulator.py  utils.py
buffet/buffet/: asgi.py  settings.py  urls.py  wsgi.py
buffet/config/: __init__.py  schema.sql
buffet/models/: apps.py  models.py
buffet/models/migrations/: 0001_initial.py  0002_tradingplan_order.py
buffet/scripts/: cron_plan.py
buffet/simulator/: db.py  mock_api.py
chatgpt transcript_files/: a.html
impl/: box analysis.ipynb  decision.py  repository.py  test_simulator.py
impl/setup/: schema.sql  setup_db.py
impl/test/: simulator.py
