[project]
name = "darva"
version = "0.1.0"
description = ""
authors = [
    {name = "Dakshin K",email = "dakshin.k1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "growwapi (>=1.1.0,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "ipykernel (>=7.0.1,<8.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "jupyterlab (>=4.4.9,<5.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "duckdb (>=1.4.1,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
